#164 : Fix deprecated use of URL constructor